--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Superheroes App</title>
-	<link href="../stylesheets/style.css" type="text/css" rel="stylesheets">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
 	<script src="../javascripts/angular.min.js"></script>
 	<script src="../javascripts/angular-ui-router.js"></script>
 	<script src="../javascripts/angular-animate.min.js"></script>
@@ -15,6 +16,6 @@
 		<ui-view>
 		</ui-view>	
 	</div>
-	
+
 </body>
 </html>
