--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Superheroes App</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
-	<script src="../javascripts/angular.min.js"></script>
-	<script src="../javascripts/angular-ui-router.js"></script>
-	<script src="../javascripts/angular-animate.min.js"></script>
-	<script src="../javascripts/angularApp.js"></script>
+	<link rel="stylesheet" href="../stylesheets/foundation.css" />
+    <script src="../javascripts/vendor/modernizr.js"></script>
 </head>
 <body data-ng-app="superheroApp">
 
@@ -16,6 +15,16 @@
 		<ui-view>
 		</ui-view>	
 	</div>
-
+	<!-- Foundation 5 Scripts -->
+	<script src="../javascripts/vendor/jquery.js"></script>
+    <script src="../javascripts/foundation.min.js"></script>
+    <!-- AngularJS -->
+	<script src="../javascripts/angular.min.js"></script>
+	<script src="../javascripts/angular-ui-router.js"></script>
+	<script src="../javascripts/angular-animate.min.js"></script>
+	<script src="../javascripts/angularApp.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
 </body>
 </html>
