--- a/public/views/list.html
+++ b/public/views/list.html
@@ -1,10 +1,12 @@
-<section id="characters">
+<section id="characters" class="row">
 	<h1>Characters List</h1>
-	<ul>
-		<li data-ng-repeat="character in characters">
+	<div class="small-12 large-12 columns">
+		<ul>
+			<li data-ng-repeat="character in characters">
 
-			<a href="#/details/{{character._id}}">{{character.alias}}</a>
-			
-		</li>
-	</ul>
+				<a href="#/details/{{character._id}}">{{character.alias}}</a>
+		
+			</li>
+		</ul>
+	</div>
 </section>
