--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,19 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Superheroes App</title>
-	<link href='https://fonts.googleapis.com/css?family=Merriweather+Sans:700,400,300' rel='stylesheet' type='text/css'>
+	<title>Superheroes App - Home</title>
+<link href='https://fonts.googleapis.com/css?family=Raleway:700,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
-	<link rel="stylesheet" href="../stylesheets/foundation.css" />
+	<link rel="stylesheet" href="../stylesheets/foundation.min.css" />
     <script src="../javascripts/vendor/modernizr.js"></script>
 </head>
 <body data-ng-app="superheroApp">
+<h1 class="hidden">Superhero App</h1>
 
 	<div id="container">
-		<header>
-			<h1 class="text-center">Superheroes Guide</h1>
-		</header>
 		<ui-view>
+			<h1 class="hidden">Views Goes Here</h1>
 		</ui-view>	
 	</div>
 
