style - details page

--- a/public/views/list.html
+++ b/public/views/list.html
@@ -1,3 +1,18 @@
+<header id="header" class="row">
+	<div class="small-12 large-12 columns">
+		<h1 class="text-center">Superhero App</h1>
+	</div>
+	<div class="small-12 columns">
+		<nav>
+			<ul>
+				<li><a href="#/home">Home</a></li>
+				<li><a href="#/list">Characters</a></li>
+				<li><a href="#/movies">Movies</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
+
 <section id="characters" class="row">
 	<center>
 		<h1>Characters List</h1>
