--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,8 @@
 <section id="home" class="row">
 	<div class="small-12 columns">
-		<h1 class="text-center">Welcome to Superhero App <br><span id="guide">Guide</span></h1>
-		<p class="text-center"><a href="#/list">ENTER</a></p>
+		<center>
+			<h1 class="text-center">Welcome to Superhero App <br><span id="guide">Guide</span></h1>
+			<p class="text-center"><a href="#/list">ENTER</a></p>
+		</center>
 	</div>
 </section>
