--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,10 @@ body {
 
 #container
 {
-	background-image: url(../images/bg1.png);
-	background-size: cover;
+/*	background-image: url(../images/bg1.png);
+	background-size: cover;*/
 	/*background-color: #242424;*/
-	height: 100%;
+	/*height: 100%;*/
 }
 
 
@@ -29,7 +29,7 @@ body {
 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 700;
-	color: white;
+	color: #ffffff;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 
@@ -80,7 +80,6 @@ nav ul li a
 	padding-top: 20%;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
-
 }
 
 
@@ -89,7 +88,7 @@ nav ul li a
 	font-family: 'Raleway', sans-serif;
 	font-weight: 700;	
 	text-transform: uppercase;
-	color: white;
+	color: #242424;
 	letter-spacing: 2px;
 }
 
@@ -98,7 +97,7 @@ nav ul li a
 	font-family: 'Raleway', sans-serif;
 	font-weight: 300;	
 	text-transform: uppercase;
-	color: white;
+	color: #242424;
 }
 
 #home a:hover
@@ -117,32 +116,26 @@ nav ul li a
 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
-	background-size: cover;
-	height: 100%;
 	padding-top: 3em;
+	padding-bottom: 3em;
 }
 
 #characters h1
 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
-	color: white;
+	color:  #2196F3;
 }
 
-.charList ul
+.charList p
 {
-	list-style-type: none;
-	line-height: 50px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 500;
 }
 
-.charList ul li a
+.charList a:hover 
 {
 	color: #242424;
-}
-
-.charList ul li a:hover
-{
-	color: #2196F3;
 }
 
 #characterDetail
