--- a/public/views/list.html
+++ b/public/views/list.html
@@ -16,12 +16,11 @@
 <section id="characters" class="row">
 	<center>
 		<h1>Characters List</h1>
-		<div class="small-12 large-12 columns charList">
-			<ul>
-				<li data-ng-repeat="character in characters">
-					<a href="#/details/{{character._id}}">{{character.alias}}</a>
-				</li>
-			</ul>
+		<div class="small-12 medium-4 columns charList" data-ng-repeat="character in characters">
+			<figure>
+				<img ng-src="../images/{{character.image}}" alt="character image" />
+			</figure>
+			<p><a href="#/details/{{character._id}}">{{character.alias}}</a></p>
 		</div>
 	</center>
 </section>
