--- a/public/views/details.html
+++ b/public/views/details.html
@@ -5,7 +5,7 @@
 		</div>
 	</header>
 
-	<section id="characterDetail" class="row animate">
+	<section id="characterDetail" class="row">
 		<div class="small-12 medium-4 columns">
 			<img ng-src="../images/{{image}}" alt="character image" />
 			</div>
