--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,7 +2,7 @@
 	<div class="small-12 columns">
 		<center>
 			<h1 class="text-center">Welcome to Superhero App <br><span id="guide">Guide</span></h1>
-			<p class="text-center"><a href="#/list">ENTER</a></p>
+			<p class="text-center homeBut"><a href="#/list">ENTER</a></p>
 		</center>
 	</div>
 </section>
