--- a/public/views/details.html
+++ b/public/views/details.html
@@ -11,7 +11,7 @@
 			</div>
 		<div class="small-12 medium-8 columns">
 			<p>City: {{city}}</p>
-			<p ng-repeat="names in name">Name: {{names}} - {{names}}</p>
+			<p>Name: {{name.fname}} {{name.lname}}</p>
 			<p ng-repeat="affiliations in affiliation">Affiliations: {{affiliations.group}} - {{affiliations.group_bio}}</p>
 		</div>
 	</section>
