--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,5 @@
 <section id="home" class="row">
+	<h1 class="hidden">Home Page</h1>
 	<div class="small-12 columns">
 		<center>
 			<h1 class="text-center">Welcome to Superhero App <br><span id="guide">Guide</span></h1>
