--- a/public/views/list.html
+++ b/public/views/list.html
@@ -1,8 +1,10 @@
 <header id="header" class="row">
+	<h1 class="hidden">Superhero App</h1>
 	<div class="small-12 large-12 columns">
 		<h1 class="text-center">Superhero App</h1>
 	</div>
 	<div class="small-12 columns">
+		<h1 class="hidden">Navigation</h1>
 		<nav class="mainNav">
 			<ul>
 				<li><a href="#/home">Home</a></li>
@@ -14,6 +16,7 @@
 </header>
 
 <section id="characters" class="row">
+	<h1 class="hidden">Characters List</h1>
 	<center>
 		<h1>Characters List</h1>
 		<div class="small-12 medium-4 columns charList" data-ng-repeat="character in characters">
