--- a/public/views/movieDetails.html
+++ b/public/views/movieDetails.html
@@ -1,4 +1,5 @@
 <header id="header" class="row">
+	<h1 class="hidden">Movie Title</h1>
 		<div class="small-12 large-12 columns">
 			<h1 class="text-center">{{movieName}}</h1>
 			<p class="text-center"><a href="#/list">Back</a></p>
@@ -6,11 +7,13 @@
 	</header>
 
 
-		<section id="characterDetail" class="row">
+	<section id="characterDetail" class="row">
+		<h1 class="hidden">Movie Details Information</h1>
 		<div class="small-12 medium-4 columns">
 			<img ng-src="../images/{{movieImage}}" alt="film image" />
 		</div>
 		<div class="small-12 medium-8 columns">
+			<h1 class="hidden">Movie Details Infor</h1>
 			<p>Year: {{movieYear}}</p>
 			<p>Year: {{moviveDesc}}</p>
 			<p>Year: {{director}}</p>
