added logo and update pages

--- a/public/views/details.html
+++ b/public/views/details.html
@@ -1,10 +1,10 @@
 <header id="header" class="row">
 	<h1 class="hidden">Character Name</h1>
-		<div class="small-12 large-12 columns">
+		<div class="small-12 large-12 columns headerTitle">
 			<h1 class="text-center">{{alias}}</h1>
 			<p class="text-center"><a href="#/list">Back</a></p>
 		</div>
-	</header>
+</header>
 
 	<section id="characterDetail" class="row">
 		<h1 class="hidden">Character Details Information</h1>
