--- a/public/views/list.html
+++ b/public/views/list.html
@@ -1,7 +1,7 @@
 <header id="header" class="row">
 	<h1 class="hidden">Superhero App</h1>
-	<div class="small-12 large-12 columns">
-		<h1 class="text-center">Superhero App</h1>
+	<div class="small-12 large-12 columns headerTitle">
+		<h1 class="text-center">Superhero Guide</h1>
 	</div>
 	<div class="small-12 columns">
 		<h1 class="hidden">Navigation</h1>
