--- a/public/views/movieDetails.html
+++ b/public/views/movieDetails.html
@@ -1,6 +1,6 @@
 <header id="header" class="row">
 	<h1 class="hidden">Movie Title</h1>
-		<div class="small-12 large-12 columns">
+		<div class="small-12 large-12 columns headerTitle">
 			<h1 class="text-center">{{movieName}}</h1>
 			<p class="text-center"><a href="#/list">Back</a></p>
 		</div>
