--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,20 +8,61 @@ body {
 	font-weight: 300;
 }
 
-#container
+/* HOME PAGE */
+#home
 {
-/*	background-image: url(../images/bg1.png);
-	background-size: cover;*/
-	/*background-color: #242424;*/
-	/*height: 100%;*/
+	padding-top: 2em;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
 }
 
+
+#home h1
+{
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;	
+	text-transform: uppercase;
+	color: #242424;
+	letter-spacing: 2px;
+}
+
+#homeBut a
+{
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;	
+	text-transform: uppercase;
+	color: #242424;
+}
+
+.homeBut
+{
+	padding-top: 2em;
+}
+
+.homeBut a
+{
+	color: #EE293D;
+}
+
+#homeBut a:hover
+{
+	color: #2196F3;
+}
+
+#guide
+{
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
+	color: #EE293D;
+}
+
+/* LIST & movieList PAGE*/
 
 #header
 {
 	max-width: 100%;
 	padding: 50px 0 30px 0;
-	background-color: #2196F3;
+	background-color: #EE2235;
 	box-shadow: 0 7px 8px -7px #242424;
 }
 
@@ -42,12 +83,12 @@ body {
 	letter-spacing: 1px;
 }
 
-#header a
+.headerTitle a
 {
 	color: #242424;
 }
 
-#header a:hover
+.headerTitle a:hover
 {
 	color: #BBDEFB;
 }
@@ -78,47 +119,11 @@ body {
 }
 
 
-#home
-{
-	padding-top: 20%;
-	font-family: 'Raleway', sans-serif;
-	font-weight: 300;
-}
-
-
-#home h1
-{
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;	
-	text-transform: uppercase;
-	color: #242424;
-	letter-spacing: 2px;
-}
-
-#home a
-{
-	font-family: 'Raleway', sans-serif;
-	font-weight: 300;	
-	text-transform: uppercase;
-	color: #242424;
-}
-
-#home a:hover
+.mainNav ul li a:hover
 {
 	color: #242424;
 }
 
-#guide
-{
-	font-family: 'Raleway', sans-serif;
-	font-weight: 300;
-	color: #EE293D;
-}
-
-.homeBut
-{
-	padding-top: 2em;
-}
 
 #characters
 {
@@ -132,20 +137,22 @@ body {
 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
-	color:  #2196F3;
+	color:  #242424;
 }
 
-.charList p
+.charList a
 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
+	color:  #242424;
 }
 
 .charList a:hover 
 {
-	color: #242424;
+	color: #EE2235;
 }
 
+/* details PAGE*/
 #characterDetail
 {
 	padding-top: 2em;
