--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,9 +1,17 @@
 <section id="home" class="row">
 	<h1 class="hidden">Home Page</h1>
+	<div class="small-12 medium-6 medium-offset-3 columns">
+		<center>
+			<figure>
+				<img src="./images/superhero-logo.svg" alt="logo"/>
+			</figure>
+		</center>
+	</div>
 	<div class="small-12 columns">
 		<center>
-			<h1 class="text-center">Welcome to Superhero App <br><span id="guide">Guide</span></h1>
+			<h1 class="text-center">Welcome to Superhero Guide</h1>
+			<h3><span id="guide">- MEAN STACK APP -</span></h3>
 			<p class="text-center homeBut"><a href="#/list">ENTER</a></p>
-		</center>
+	</enter>
 	</div>
 </section>
