--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -167,12 +167,12 @@ body {
 	box-shadow: 0px 1px 7px #000000;
 }
 
-
-
 /*----------------ngAnimate----------------*/
 .ng-enter           
 { 
-    animation: bounceIn 0.5s  ease-in; 
+    /*animation: bounceIn 0.5s  ease-in; */
+    animation: fadeIn 0.5s  ease-in;
+    animation:fadeInLeft 0.5s  ease-in;
 }
 
 .ng-leave           
@@ -184,9 +184,8 @@ body {
 .list.ng-enter         
 { 
     animation: fadeIn 0.5s  ease-in;
-     
-
 }
+
 .list.ng-leave         
 { 
    	animation:fadeInLeft 0s  ease-in; 
