--- a/public/views/details.html
+++ b/public/views/details.html
@@ -8,13 +8,20 @@
 
 	<section id="characterDetail" class="row">
 		<h1 class="hidden">Character Details Information</h1>
-		<div class="small-12 medium-4 columns">
+		<div class="small-12 medium-4 large-4 columns">
 			<img ng-src="../images/{{image}}" alt="character image" />
-			</div>
-		<div class="small-12 medium-8 columns">
-			<h1 class="hidden">Character info</h1>
-			<p>City: {{city}}</p>
-			<p>Name: {{name.fname}} {{name.lname}}</p>
-			<p ng-repeat="affiliations in affiliation">Affiliations: {{affiliations.group}} - {{affiliations.group_bio}}</p>
 		</div>
+
+		<div class="small-12 medium-8 large-8 columns">
+			<h1 class="hidden">Character info</h1>
+			<p>City: {{ city }}</p>
+			<p>Name: {{ name.fname }} {{ name.lname }}</p>
+			<div ng-repeat="affiliations in affiliation">
+				<p>Affiliations: {{ affiliations.group }} 
+				<p>Bio: {{ affiliations.group_bio }}</p>
+			</p>
+		</div>
+
 	</section>
+
+	
