--- a/public/views/movieList.html
+++ b/public/views/movieList.html
@@ -10,7 +10,8 @@
 			<ul>
 				<li><a href="#/home">Home</a></li>
 				<li><a href="#/list">Characters</a></li>
-				<li><a href="#/movies">Movies</a></li>
+				<li><a href="#/movieList">Movies</a></li>
+				<li><a href="#/deadpools">Deadpools</a></li>
 			</ul>
 		</nav>
 	</div>
