--- a/public/views/deadpool.html
+++ b/public/views/deadpool.html
@@ -12,7 +12,7 @@
 			<img ng-src="../images/{{image}}" alt="character image" />
 		</div>
 
-		<div class="small-12 medium-8 large-8 columns">
+		<div class="small-12 medium-8 large-8 columns charInfo">
 			<h1 class="hidden">Character info</h1>
 			<p>City: {{ city }}</p>
 			<p>Name: {{ name.fname }} {{ name.lname }}</p>
