--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,6 @@
 <section id="home" class="row">
 	<h1 class="hidden">Home Page</h1>
-	<div class="small-12 medium-6 medium-offset-3 columns">
+	<div class="small-12 medium-6 medium-offset-3 large-6 large-offset-3 columns">
 		<center>
 			<figure>
 				<img src="./images/superhero-logo.svg" alt="logo"/>
