--- a/public/views/movieDetails.html
+++ b/public/views/movieDetails.html
@@ -9,10 +9,10 @@
 
 	<section id="characterDetail" class="row">
 		<h1 class="hidden">Movie Details Information</h1>
-		<div class="small-12 medium-4 columns">
+		<div class="small-12 medium-4 large-4 columns">
 			<img ng-src="../images/{{movieImage}}" alt="film image" />
 		</div>
-		<div class="small-12 medium-8 columns">
+		<div class="small-12 medium-8 large-8 columns charInfo">
 			<h1 class="hidden">Movie Details Info</h1>
 			<p>Year: {{movieYear}}</p>
 			<p>Description: {{moviveDesc}}</p>
