--- a/public/views/index.html
+++ b/public/views/index.html
@@ -28,6 +28,7 @@
 	<script src="../javascripts/angular-ui-router.js"></script>
 	<script src="../javascripts/angular-animate.min.js"></script>
 	<script src="../javascripts/angularApp.js"></script>
+	<script src="../javascripts/factory.js"></script>
     <script>
       $(document).foundation();
     </script>
